<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.example.socket.Activity.LoginActivity">
    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"/>
    <TextView
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diaochezhang"
        android:layout_marginTop="10dp"
        android:textSize="60sp"
        android:textColor="@color/colorBlack"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/image_login"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@mipmap/login_logo"/>
    <LinearLayout
        android:id="@+id/lin1"
        android:layout_below="@id/image_login"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text_login1"
            android:text="@string/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_marginRight="20dp"
            android:textSize="50sp"/>
        <TextView
            android:id="@+id/edit_login1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="50sp"
            android:background="@drawable/shape_edit"
            android:hint="@string/edit_user"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lin2"
        android:layout_below="@id/lin1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text_login2"
            android:text="@string/pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_marginRight="20dp"
            android:textSize="50sp"/>
        <TextView
            android:id="@+id/edit_login2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:inputType="textPassword"
            android:background="@drawable/shape_edit"
            android:textColor="@color/colorBlack"
            android:textSize="50sp"
            android:hint="@string/edit_pwd"/>
    </LinearLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:textSize="50sp"
        android:background="#95CBEB"
        android:text="登  录"
        android:layout_below="@id/lin2"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#fff" />
</RelativeLayout>
